--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,44 +1,16 @@
 ---
-title: "Introduction"
-description: "Welcome to the home of your new documentation"
+title: "Mycroft for Developers"
+description: "Build and enhance custom experiences with Mycroft's powerful APIs and SDKs."
 ---
 
-<img alt="Hero Light" classname="block dark:hidden" src="/images/hero-light.svg" />
+<img alt="Hero Dark" class="hidden dark:block" src="/images/hero-dark.svg" />
 
-<img alt="Hero Dark" classname="hidden dark:block" src="/images/hero-dark.svg" />
+## Getting Started
 
-## Setting up
+Empower your users with Mycroft across all platforms. Seamlessly customize the UI or fine-tune user interactions to provide an intuitive and consistent experience.
 
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
-  </Card>
-
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
-  </Card>
-
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/components/accordion">
-    Build interactive features and designs to guide your users
-  </Card>
-
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
+<CardGroup cols="1">
+  <Card title="Install Mycroft on the Web" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
+    Here you'll find everything you need to install Mycroft
   </Card>
 </CardGroup>
