Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,13 +1,14 @@
 ---
 title: "Mycroft for Developers"
 description: "Build and enhance custom experiences with Mycroft's powerful APIs and SDKs."
+icon: 'code'
 ---
 
 <img alt="Hero Dark" class="hidden dark:block" src="/images/hero-dark.svg" />
 
 ## Getting Started
 
-Empower your users with Mycroft across all platforms. Seamlessly customize the UI or fine-tune user interactions to provide an intuitive and consistent experience.
+Empower your users with Mycroft across all platforms. Customize the UI, apply RBAC\*\*\*\* for secure access, and use tracking dimensions to optimize user experiences, ensuring intuitive and consistent interactions.
 
 <CardGroup cols="1">
   <Card title="Install Mycroft on the Web" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
