Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Mycroft for Developers"
 description: "Build and enhance custom experiences with Mycroft's powerful APIs and SDKs."
-icon: 'code'
+icon: 'map'
 ---
 
 <img alt="Hero Dark" class="hidden dark:block" src="/images/hero-dark.svg" />
