Update introduction and installation documentation; add visitor installation guide and remove development section

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,17 +1,22 @@
 ---
-title: "Mycroft for Developers"
+title: "Quickstart"
 description: "Build and enhance custom experiences with Mycroft's powerful APIs and SDKs."
-icon: 'map'
+icon: 'rocket'
 ---
-
-<img alt="Hero Dark" class="hidden dark:block" src="/images/hero-dark.svg" />
 
 ## Getting Started
 
-Empower your users with Mycroft across all platforms. Customize the UI, apply RBAC\*\*\*\* for secure access, and use tracking dimensions to optimize user experiences, ensuring intuitive and consistent interactions.
+Empower your users with Mycroft across all platforms. Customize the UI, apply RBAC for secure access, and use tracking dimensions to optimize user experiences, ensuring intuitive and consistent interactions.
 
-<CardGroup cols="1">
-  <Card title="Install Mycroft on the Web" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Here you'll find everything you need to install Mycroft
+## Installation Guide
+
+Mycroft offers two installation options: one for websites that don’t require user logins and another for those that do. Choose the approach that aligns with your website’s needs!
+
+<CardGroup cols={2}>
+  <Card title="Open Access Websites" icon="pen-to-square" href="web/visitorInstallation">
+    A hassle-free way to set up Mycroft, perfect for websites that don’t require user logins.
+  </Card>
+  <Card title="Restricted Access Websites" icon="pen-to-square" href="web/loginInstallation">
+    A seamless way to set up Mycroft tailored for websites that require user logins.
   </Card>
 </CardGroup>
