Remove deprecated API reference files and snippets from documentation

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,9 +14,9 @@ Mycroft offers two installation options: one for websites that don’t require u
 
 <CardGroup cols={2}>
   <Card title="Open Access Websites" icon="pen-to-square" href="web/visitorInstallation">
-    A hassle-free way to set up Mycroft, perfect for websites that don’t require user logins.
+    Set up Mycroft for open-access sites, perfect for landing pages or websites without user logins.
   </Card>
   <Card title="Restricted Access Websites" icon="pen-to-square" href="web/loginInstallation">
-    A seamless way to set up Mycroft tailored for websites that require user logins.
+    Set up Mycroft for selective-access sites, ideal for dashboards or login-protected portals.
   </Card>
 </CardGroup>
