Enhance installation guide clarity by specifying open-access and restricted-access options for Mycroft implementation

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,7 +10,7 @@ Empower your users with Mycroft across all platforms. Customize the UI, apply RB
 
 ## Installation Guide
 
-Mycroft offers two installation options: one for websites that don’t require user logins and another for those that do. Choose the approach that aligns with your website’s needs!
+Mycroft offers two installation options, one designed for open-access websites without user logins, such as landing pages or informational sites, and another for platforms with restricted access for registered users, such as dashboards, customer portals, or internal tools, ensuring you can implement the solution that best suits your website's needs.
 
 <CardGroup cols={2}>
   <Card title="Open Access Websites" icon="pen-to-square" href="web/visitorInstallation">
