Update footer social links in mint.json and refine installation titles for clarity

--- a/web/loginInstallation.mdx
+++ b/web/loginInstallation.mdx
@@ -1,6 +1,6 @@
 ---
 sidebarTitle: "Restricted Access Websites"
-title: "Websites Which Require User Login"
+title: "Setup for login-protected portals & dashboards"
 description: "This section is designed for websites requiring user login, offering a personalized and secure setup. Follow these steps to seamlessly integrate Mycroft with your user accounts."
 mode: "wide"
 ---
