--- a/web/visitorInstallation.mdx
+++ b/web/visitorInstallation.mdx
@@ -1,6 +1,6 @@
 ---
 sidebarTitle: "Open Access Websites"
-title: "Websites Which Doesn't Require User Login"
+title: "Setup for public sites like landing pages"
 description: "This section will help you set up Mycroft in just a few simple steps, perfect for websites which doesn't require users to login. Get started effortlessly and integrate Mycroft into your website in minutes!"
 mode: "wide"
 ---
